@@ -157,10 +157,7 @@ void FirstIndex::run() {
         sem.acquire(1);
         mutex1.unlock();
         QStringList pathList;
-        pathList.append("/media/用户保险箱");
-        pathList.append("/media/邮件保险箱");
-        pathList.append("/media/公共保险箱");
-        pathList.append("/media/备份保险箱");
+        pathList.append(QStandardPaths::writableLocation(QStandardPaths::DesktopLocation));
         this->setPath(pathList);
         this->Traverse();
         FileUtils::_max_index_count = this->q_index->length();
