@@ -25,6 +25,7 @@
 #include <QFuture>
 #include <QThreadPool>
 #include <QFile>
+#include <QStandardPaths>
 #include "file-utils.h"
 #include "index-generator.h"
 #include "chinese-segmentation.h"
@@ -33,8 +34,8 @@
 
 //#define INDEX_PATH (QStandardPaths::writableLocation(QStandardPaths::HomeLocation)+"/.config/org.ukui/ukui-search/index_data").toStdString()
 //#define CONTENT_INDEX_PATH (QStandardPaths::writableLocation(QStandardPaths::HomeLocation)+"/.config/org.ukui/ukui-search/content_index_data").toStdString()
-#define INDEX_PATH "/media/用户保险箱/.ukui-search/index_data"
-#define CONTENT_INDEX_PATH "/media/用户保险箱/.ukui-search/content_index_data"
+#define INDEX_PATH QStandardPaths::writableLocation(QStandardPaths::DesktopLocation).toStdString() +"/.ukui-search/index_data"
+#define CONTENT_INDEX_PATH QStandardPaths::writableLocation(QStandardPaths::DesktopLocation).toStdString() +"/.ukui-search/content_index_data"
 
 using namespace Zeeker;
 
