@@ -3,10 +3,7 @@ using namespace Zeeker;
 SearchMethodManager::SearchMethodManager()
 {
     QStringList pathList;
-    pathList.append("/media/用户保险箱");
-    pathList.append("/media/邮件保险箱");
-    pathList.append("/media/公共保险箱");
-    pathList.append("/media/备份保险箱");
+    pathList.append(QStandardPaths::writableLocation(QStandardPaths::DesktopLocation));
     m_iw = InotifyWatch::getInstance(pathList);
 }
 
